[tool.poetry]
name = "rpirfm69"
version = "0.1.0"
description = ""
authors = ["ZwAnto <antoine.hamon+github@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rpi-gpio = "^0.7.1"
spidev = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
